Sculpting option "show difusse color" is only displayed when viewport is clicked. #39517

Closed
opened 2014-03-30 18:42:15 +02:00 by Dan JR · 19 comments

System Information
W7 SP1 x64 - Nvidia Quadro FX1800
Operating system and graphics card

Blender 2.70

Short description of error
The option "show diffuse color" is only displayed when the viewport is clicked.

Exact steps for others to reproduce the error

  • change to sculpt mode;
  • change the color of the diffuse material;
  • enable "show diffuse color" in options tab.
**System Information** W7 SP1 x64 - Nvidia Quadro FX1800 Operating system and graphics card **Blender 2.70** **Short description of error** The option "show diffuse color" is only displayed when the viewport is clicked. **Exact steps for others to reproduce the error** - change to sculpt mode; - change the color of the diffuse material; - enable "show diffuse color" in options tab.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DaniloJunior

Added subscriber: @DaniloJunior

Changed status from 'Open' to: 'Duplicate'

Changed status from 'Open' to: 'Duplicate'

✘ Merged into #39520.

✘ Merged into #39520.
Author

Hi mont29!

(show diffuse color + dyntopo) and (show diffuse color only displayed when viewport is clicked) are different bugs..

Hi mont29! (show diffuse color + dyntopo) and (show diffuse color only displayed when viewport is clicked) are different bugs..
Author

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'
Dan JR reopened this issue 2014-03-30 19:33:13 +02:00
Author

Hi mont29!

(show diffuse color + dyntopo) and (show diffuse color only displayed when viewport is clicked) are different bugs..

Hi mont29! (show diffuse color + dyntopo) and (show diffuse color only displayed when viewport is clicked) are different bugs..

Added subscriber: @mont29

Added subscriber: @mont29

ouch, sorry :/

ouch, sorry :/

Added subscriber: @Sergey

Added subscriber: @Sergey

Couldn't really reproduce the issue with default cube. Please attach simple .blend file which demonstrates the issue.

Couldn't really reproduce the issue with default cube. Please attach simple .blend file which demonstrates the issue.
Author

Hi Sergey!

I posted a video showing the issue.

video

Hi Sergey! I posted a video showing the issue. [video ](https://vimeo.com/90548481)

VIdeos are rarely more useful than .blend files. You always need to guess loads of of stuff like settings and so.

In this particular case i was able to reproduce issue with VBOs enabled (which you would never guess from the video btw).

VIdeos are rarely more useful than .blend files. You always need to guess loads of of stuff like settings and so. In this particular case i was able to reproduce issue with VBOs enabled (which you would never guess from the video btw).
Sergey Sharybin self-assigned this 2014-03-31 19:23:20 +02:00
Author

You are right only happens with vbo enabled.

Sorry, next time I post a .blend file.

thanks!

You are right only happens with vbo enabled. Sorry, next time I post a .blend file. thanks!

I've committed some tweaks to the code at 7955cb7. They might potentially solve the issue. At least seems VBO enabled and disabled now works as it was intended to. Please give it a try and see whether it works for you.

I've committed some tweaks to the code at 7955cb7. They might potentially solve the issue. At least seems VBO enabled and disabled now works as it was intended to. Please give it a try and see whether it works for you.

This issue was referenced by blender/blender-addons-contrib@03bd418d16

This issue was referenced by blender/blender-addons-contrib@03bd418d1610da28258d361180f6eae2d8be671c

This issue was referenced by 03bd418d16

This issue was referenced by 03bd418d1610da28258d361180f6eae2d8be671c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 03bd418d16.

Closed by commit 03bd418d16.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39517
No description provided.